--- a/argus/index.html
+++ b/argus/index.html
@@ -19,7 +19,7 @@
     </div>
 
     <h2 class="sub_head">the vigilant guardian</h2>
-    <div class="container">
+    <div class="container_1">
         <form action="" class="search-bar">
             <input type="text" placeholder="enter the link" name="box">
             <button type="enter"><img src="images/search.png"></button>
